--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
 TODO/ Feature Requests:
 DONE: 00. One color - http://colorbrewer2.org/#type=sequential&scheme=BuGn&n=3
 DONE: Firefox Fix.
-2. Sub integer support
-0. That last X-axis ranges make sure it's not 5.3 when it's seperated by 1 tick
+DONE 2. Sub integer support
+DONE 0. That last X-axis ranges make sure it's not 5.3 when it's seperated by 1 tick
 1. Y-axis Ranges should be selected better.
+2. be able to accept very small differences in data values, like: 2.702 to 2.705, etc.
+3. Reset All link should reset all URL parameters.
 
 7. Retest last_days=XX
 5. On the Spot1 page, be able to change the xAxis and GroupBy URLs based on the select drop down change.
