--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ DONE: 00. One color - http://colorbrewer2.org/#type=sequential&scheme=BuGn&n=3
 DONE: Firefox Fix.
 DONE 2. Sub integer support
 DONE 0. That last X-axis ranges make sure it's not 5.3 when it's seperated by 1 tick
+- Generate some super small data sets on the FE, can that be done easily?
 1. Y-axis Ranges should be selected better.
 2. be able to accept very small differences in data values, like: 2.702 to 2.705, etc.
 3. Reset All link should reset all URL parameters.
