send chart dimension as quote
Former-commit-id: afc40134c4a107a9268a0c3b60e8c8ae18ce1919

--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ DONE 2. Switched over to deterministic random launchDate generator.
 3. Need to copy over CZ cali files to RZ, and do testing.
 1.5  Launchdate feature needs more testing on Data with an actual launchdate (STUBs wont work because those dates are randomly generated).
 
+
 HIGHEST TODO:
 1. On Date Type show date instead of 1e9
 2. Ideally set the bar width
@@ -22,6 +23,8 @@ HIGHEST TODO:
 =================================================================================
 4. Naming of Barchat => dimension ("Iteration")
 5. Redirect from /spot2 to our deployment area.
+    * https://lc.llnl.gov/content/
+    * spot2 -> I already made the content directory request.
 6. File upload browser on landing page.
 7. Make tic marks at the beginning of the barChart.
 9. On the Spot1 page, be able to change the xAxis and GroupBy URLs based on the select drop down change.
