--- a/TODO
+++ b/TODO
@@ -9,16 +9,14 @@ DONE 2. Switched over to deterministic random launchDate generator.
 
 
 HIGHEST TODO:
+2. Add Labels: Groupby and Label xAxis
 1. On Date Type show date instead of 1e9
+3. From UserPreferences Module -> make table change right away. -> $('._4').hide()/ .show()
+    * when the person checks a checkbox or uncheckboxes it.
+0. Fix Iterations -> xUnit()  -> set # of buckets.
 2. Ideally set the bar width
     * Next best option is to get the Bar Off the Y Axis, by having the range be +/- 5%
-0. Fix Iterations -> xUnit()  -> set # of buckets.
 3.5 Be able to have a date type to show date (month/year) if layout says it's a date.
-2. Add Labels: Groupby and Label xAxis
-3. Preferences: both loading of the checkmarks and graphs
-    * .show = then show the graph, else hide the graph
-    * .show = then show the table column, else hide the table column.
-    * And saving the checkbox or uncheckbox.
 3.6 X-tics take a look if it's just integers?
 =================================================================================
 4. Naming of Barchat => dimension ("Iteration")
