--- a/TODO
+++ b/TODO
@@ -18,10 +18,11 @@ next:
 DONE - alphabetize the the checkboxes, so you dont have to hunt.
 DONE - Add Labels: Groupby and Label xAxis
 DONE - XUnit bucketing.
-- for TinyNums make x-axis vertical
+DONE - Added commas to really large numbers.
+DONE - make x-axis 45 degrees vertical
+DONE - for X-axis: match date to duration format.  (multi-line, OR vertically)
 - RightMost BIN is cut in half for some reason.
-- put the precize time in table.
-- for X-axis: match date to duration format.  (multi-line, OR vertically)
+- put the precize time in table -> right now it's just a unix epoch time.
 - spot2 redirect.
 - Table HTML -> for the pieCharts and barCharts.
 - dynamic table row show/hide fix.
