Refactor yrange, also add new URLs to keep them straight and put them in the documentation
Former-commit-id: 6e902c079d50d136d5ba7c30df3d8ab6141d2fa4

--- a/TODO
+++ b/TODO
@@ -18,6 +18,7 @@ RECENTLY DONE:
 DONE - alphabetize the drop down.
 DONE - Table HTML -> for the pieCharts and barCharts - maintain left/right position.
 DONE - dynamic table row show/hide fix.
+DONE - Added Dev and Prod URLs to documentation url list, to make it easier to remember the URLs.
 
 
 List of Joe's working on:
