add error message if a sf parameter is not given.  increase size of that error message by a bit.
Former-commit-id: d7d07ff59b1f68e2dc010b8a3be7b1bd51fff758

--- a/TODO
+++ b/TODO
@@ -26,6 +26,7 @@ List of Joe's working on:
 - Jupyter call not returning stuff
 - Durations call not returning stuff
 - Getting the following to not crash: RZ ONLY: ~/testresults
+- Figure out why the Summary JSONP call is taking 8 seconds to respond.
 
 
 Next:
