--- a/TODO
+++ b/TODO
@@ -20,18 +20,15 @@ DONE - Table HTML -> for the pieCharts and barCharts - maintain left/right posit
 DONE - dynamic table row show/hide fix.
 DONE - Added Dev and Prod URLs to documentation url list, to make it easier to remember the URLs.
 DONE - if sf file is not there then spit out an error.
+DONE - for now an input box.  "Please provide a directory that contains dot cali files."
 
 
-List of Joe's working on:
-- Compare page x-axis and groupby drop downs not populating
-- Jupyter call not returning stuff
-- Durations call not returning stuff
-- Getting the following to not crash: RZ ONLY: ~/testresults
-- Figure out why the Summary JSONP call is taking 8 seconds to respond.
+https://lc.llnl.gov/spot/dcvis/?sf=/usr/gapps/spot/datasets/lulesh_new
+https://rzlc.llnl.gov/spot/dcvis/?sf=/g/g0/pascal/testresults&xaxis=ccompiler&groupby=codename
+
 
 
 Next:
-- for now an input box.  "Please provide a directory that contains dot cali files."
 - Naming of Barchat => dimension ("Iteration")
     * don't mess up the URLs (dont use BarChart0, BarChart1, etc)
 - LeftMost BIN does not show up.
@@ -43,7 +40,7 @@ Next:
 - Nulls
 - STrings plus more than 12 unique values then we need to have a left horizontal bar.
 - On the Spot1 page, be able to change the xAxis and GroupBy URLs based on the select drop down change.
-
+- BUG: Unclicking the last pieChart.
 
 
 https://stackoverflow.com/questions/15191258/properly-display-bin-width-in-barchart-using-dc-js-and-crossfilter-js
