--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@ DONE - dynamic table row show/hide fix.
 DONE - Added Dev and Prod URLs to documentation url list, to make it easier to remember the URLs.
 DONE - if sf file is not there then spit out an error.
 DONE - for now an input box.  "Please provide a directory that contains dot cali files."
+DONE - Naming of Barchat => dimension ("Iteration")
 
 
 https://lc.llnl.gov/spot/dcvis/?sf=/usr/gapps/spot/datasets/lulesh_new
@@ -29,8 +30,6 @@ https://rzlc.llnl.gov/spot/dcvis/?sf=/g/g0/pascal/testresults&xaxis=ccompiler&gr
 
 
 Next:
-- Naming of Barchat => dimension ("Iteration")
-    * don't mess up the URLs (dont use BarChart0, BarChart1, etc)
 - LeftMost BIN does not show up.
 - RightMost BIN is cut in half for some reason.
 - File Upload browser on landing Page.
@@ -40,6 +39,12 @@ Next:
 - Nulls
 - STrings plus more than 12 unique values then we need to have a left horizontal bar.
 - On the Spot1 page, be able to change the xAxis and GroupBy URLs based on the select drop down change.
+
+
+
+
+
+
 
 
 https://stackoverflow.com/questions/15191258/properly-display-bin-width-in-barchart-using-dc-js-and-crossfilter-js
